// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountsMenu Snapshots match snapshot when MetaMask Card is hidden 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "off",
      "right": "off",
      "top": "off",
    }
  }
  style={
    {
      "backgroundColor": "#ffffff",
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 16,
          "height": 56,
          "paddingLeft": 8,
          "paddingRight": 8,
        },
        {
          "marginTop": 0,
        },
        undefined,
      ]
    }
    testID="header"
  >
    <View>
      <View
        onLayout={[Function]}
      >
        <View
          style={
            [
              {
                "transform": [
                  {
                    "scale": 1,
                  },
                ],
              },
              {
                "alignItems": "center",
                "justifyContent": "center",
              },
            ]
          }
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderRadius": 8,
                  "height": 32,
                  "justifyContent": "center",
                  "opacity": 1,
                  "width": 32,
                },
                undefined,
              ]
            }
            testID="accounts-menu-back-button"
          >
            <SvgMock
              fill="currentColor"
              name="ArrowLeft"
              style={
                [
                  {
                    "color": "#121314",
                    "height": 24,
                    "width": 24,
                  },
                  undefined,
                ]
              }
            />
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        [
          {
            "alignItems": "center",
            "display": "flex",
            "flexBasis": "0%",
            "flexGrow": 1,
            "flexShrink": 1,
          },
          undefined,
        ]
      }
    />
    <View>
      <View
        onLayout={[Function]}
      />
    </View>
  </View>
  <RCTScrollView
    style={
      {
        "backgroundColor": "#ffffff",
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
      }
    }
    testID="accounts-menu-scroll"
  >
    <View>
      <View
        style={
          [
            {
              "display": "flex",
            },
            {
              "paddingBottom": 12,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 12,
            },
          ]
        }
      >
        <Text
          accessibilityRole="text"
          style={
            [
              {
                "color": "#686e7d",
                "fontFamily": "Geist-Regular",
                "fontSize": 16,
                "fontWeight": 400,
                "letterSpacing": 0,
                "lineHeight": 24,
              },
              undefined,
            ]
          }
        >
          accounts_menu.manage
        </Text>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "backgroundColor": "#ffffff",
            "paddingBottom": 12,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 12,
          }
        }
        testID="settings-link"
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
                "gap": 16,
                "justifyContent": "space-between",
              },
              undefined,
            ]
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "flex-start",
                  "display": "flex",
                  "flexBasis": "0%",
                  "flexDirection": "row",
                  "flexGrow": 1,
                  "flexShrink": 1,
                  "gap": 16,
                },
                undefined,
              ]
            }
          >
            <SvgMock
              fill="currentColor"
              name="Setting"
              style={
                [
                  {
                    "color": "#121314",
                    "height": 24,
                    "width": 24,
                  },
                  undefined,
                ]
              }
            />
            <View
              style={
                [
                  {
                    "display": "flex",
                    "flexBasis": "0%",
                    "flexGrow": 1,
                    "flexShrink": 1,
                  },
                  undefined,
                ]
              }
            >
              <Text
                accessibilityRole="text"
                style={
                  [
                    {
                      "color": "#121314",
                      "fontFamily": "Geist-Medium",
                      "fontSize": 16,
                      "fontWeight": 400,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    },
                    undefined,
                  ]
                }
              >
                accounts_menu.settings
              </Text>
            </View>
          </View>
          <View
            style={
              [
                {
                  "display": "flex",
                },
                undefined,
              ]
            }
          >
            <SvgMock
              fill="currentColor"
              name="ArrowRight"
              style={
                [
                  {
                    "color": "#686e7d",
                    "height": 16,
                    "width": 16,
                  },
                  undefined,
                ]
              }
            />
          </View>
        </View>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "backgroundColor": "#ffffff",
            "paddingBottom": 12,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 12,
          }
        }
        testID="contacts-menu-item"
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
                "gap": 16,
                "justifyContent": "space-between",
              },
              undefined,
            ]
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "flex-start",
                  "display": "flex",
                  "flexBasis": "0%",
                  "flexDirection": "row",
                  "flexGrow": 1,
                  "flexShrink": 1,
                  "gap": 16,
                },
                undefined,
              ]
            }
          >
            <SvgMock
              fill="currentColor"
              name="Bookmark"
              style={
                [
                  {
                    "color": "#121314",
                    "height": 24,
                    "width": 24,
                  },
                  undefined,
                ]
              }
            />
            <View
              style={
                [
                  {
                    "display": "flex",
                    "flexBasis": "0%",
                    "flexGrow": 1,
                    "flexShrink": 1,
                  },
                  undefined,
                ]
              }
            >
              <Text
                accessibilityRole="text"
                style={
                  [
                    {
                      "color": "#121314",
                      "fontFamily": "Geist-Medium",
                      "fontSize": 16,
                      "fontWeight": 400,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    },
                    undefined,
                  ]
                }
              >
                send.contacts
              </Text>
            </View>
          </View>
          <View
            style={
              [
                {
                  "display": "flex",
                },
                undefined,
              ]
            }
          >
            <SvgMock
              fill="currentColor"
              name="ArrowRight"
              style={
                [
                  {
                    "color": "#686e7d",
                    "height": 16,
                    "width": 16,
                  },
                  undefined,
                ]
              }
            />
          </View>
        </View>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "backgroundColor": "#ffffff",
            "paddingBottom": 12,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 12,
          }
        }
        testID="permissions-menu-item"
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
                "gap": 16,
                "justifyContent": "space-between",
              },
              undefined,
            ]
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "flex-start",
                  "display": "flex",
                  "flexBasis": "0%",
                  "flexDirection": "row",
                  "flexGrow": 1,
                  "flexShrink": 1,
                  "gap": 16,
                },
                undefined,
              ]
            }
          >
            <SvgMock
              fill="currentColor"
              name="SecurityTick"
              style={
                [
                  {
                    "color": "#121314",
                    "height": 24,
                    "width": 24,
                  },
                  undefined,
                ]
              }
            />
            <View
              style={
                [
                  {
                    "display": "flex",
                    "flexBasis": "0%",
                    "flexGrow": 1,
                    "flexShrink": 1,
                  },
                  undefined,
                ]
              }
            >
              <Text
                accessibilityRole="text"
                style={
                  [
                    {
                      "color": "#121314",
                      "fontFamily": "Geist-Medium",
                      "fontSize": 16,
                      "fontWeight": 400,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    },
                    undefined,
                  ]
                }
              >
                accounts_menu.permissions
              </Text>
            </View>
          </View>
          <View
            style={
              [
                {
                  "display": "flex",
                },
                undefined,
              ]
            }
          >
            <SvgMock
              fill="currentColor"
              name="ArrowRight"
              style={
                [
                  {
                    "color": "#686e7d",
                    "height": 16,
                    "width": 16,
                  },
                  undefined,
                ]
              }
            />
          </View>
        </View>
      </View>
      <View
        style={
          [
            {
              "display": "flex",
            },
            {
              "backgroundColor": "#b7bbc866",
              "height": 1,
              "marginBottom": 8,
              "marginLeft": 16,
              "marginRight": 16,
              "marginTop": 8,
              "opacity": 0.75,
            },
          ]
        }
      />
      <View
        style={
          [
            {
              "display": "flex",
            },
            {
              "paddingBottom": 12,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 12,
            },
          ]
        }
      >
        <Text
          accessibilityRole="text"
          style={
            [
              {
                "color": "#686e7d",
                "fontFamily": "Geist-Regular",
                "fontSize": 16,
                "fontWeight": 400,
                "letterSpacing": 0,
                "lineHeight": 24,
              },
              undefined,
            ]
          }
        >
          accounts_menu.resources
        </Text>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "backgroundColor": "#ffffff",
            "paddingBottom": 12,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 12,
          }
        }
        testID="about-metamask-menu-item"
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
                "gap": 16,
                "justifyContent": "space-between",
              },
              undefined,
            ]
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "flex-start",
                  "display": "flex",
                  "flexBasis": "0%",
                  "flexDirection": "row",
                  "flexGrow": 1,
                  "flexShrink": 1,
                  "gap": 16,
                },
                undefined,
              ]
            }
          >
            <SvgMock
              fill="currentColor"
              name="Info"
              style={
                [
                  {
                    "color": "#121314",
                    "height": 24,
                    "width": 24,
                  },
                  undefined,
                ]
              }
            />
            <View
              style={
                [
                  {
                    "display": "flex",
                    "flexBasis": "0%",
                    "flexGrow": 1,
                    "flexShrink": 1,
                  },
                  undefined,
                ]
              }
            >
              <Text
                accessibilityRole="text"
                style={
                  [
                    {
                      "color": "#121314",
                      "fontFamily": "Geist-Medium",
                      "fontSize": 16,
                      "fontWeight": 400,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    },
                    undefined,
                  ]
                }
              >
                app_settings.info_title_beta
              </Text>
            </View>
          </View>
          <View
            style={
              [
                {
                  "display": "flex",
                },
                undefined,
              ]
            }
          >
            <SvgMock
              fill="currentColor"
              name="ArrowRight"
              style={
                [
                  {
                    "color": "#686e7d",
                    "height": 16,
                    "width": 16,
                  },
                  undefined,
                ]
              }
            />
          </View>
        </View>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "backgroundColor": "#ffffff",
            "paddingBottom": 12,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 12,
          }
        }
        testID="request-feature-menu-item"
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
                "gap": 16,
                "justifyContent": "space-between",
              },
              undefined,
            ]
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "flex-start",
                  "display": "flex",
                  "flexBasis": "0%",
                  "flexDirection": "row",
                  "flexGrow": 1,
                  "flexShrink": 1,
                  "gap": 16,
                },
                undefined,
              ]
            }
          >
            <SvgMock
              fill="currentColor"
              name="Details"
              style={
                [
                  {
                    "color": "#121314",
                    "height": 24,
                    "width": 24,
                  },
                  undefined,
                ]
              }
            />
            <View
              style={
                [
                  {
                    "display": "flex",
                    "flexBasis": "0%",
                    "flexGrow": 1,
                    "flexShrink": 1,
                  },
                  undefined,
                ]
              }
            >
              <Text
                accessibilityRole="text"
                style={
                  [
                    {
                      "color": "#121314",
                      "fontFamily": "Geist-Medium",
                      "fontSize": 16,
                      "fontWeight": 400,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    },
                    undefined,
                  ]
                }
              >
                app_settings.request_feature
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "backgroundColor": "#ffffff",
            "paddingBottom": 12,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 12,
          }
        }
        testID="support-menu-item"
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
                "gap": 16,
                "justifyContent": "space-between",
              },
              undefined,
            ]
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "flex-start",
                  "display": "flex",
                  "flexBasis": "0%",
                  "flexDirection": "row",
                  "flexGrow": 1,
                  "flexShrink": 1,
                  "gap": 16,
                },
                undefined,
              ]
            }
          >
            <SvgMock
              fill="currentColor"
              name="MessageQuestion"
              style={
                [
                  {
                    "color": "#121314",
                    "height": 24,
                    "width": 24,
                  },
                  undefined,
                ]
              }
            />
            <View
              style={
                [
                  {
                    "display": "flex",
                    "flexBasis": "0%",
                    "flexGrow": 1,
                    "flexShrink": 1,
                  },
                  undefined,
                ]
              }
            >
              <Text
                accessibilityRole="text"
                style={
                  [
                    {
                      "color": "#121314",
                      "fontFamily": "Geist-Medium",
                      "fontSize": 16,
                      "fontWeight": 400,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    },
                    undefined,
                  ]
                }
              >
                app_settings.contact_support
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          [
            {
              "display": "flex",
            },
            {
              "backgroundColor": "#b7bbc866",
              "height": 1,
              "marginBottom": 8,
              "marginLeft": 16,
              "marginRight": 16,
              "marginTop": 8,
              "opacity": 0.75,
            },
          ]
        }
      />
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "backgroundColor": "#ffffff",
            "paddingBottom": 12,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 12,
          }
        }
        testID="lock-menu-item"
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
                "gap": 16,
                "justifyContent": "space-between",
              },
              undefined,
            ]
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "flex-start",
                  "display": "flex",
                  "flexBasis": "0%",
                  "flexDirection": "row",
                  "flexGrow": 1,
                  "flexShrink": 1,
                  "gap": 16,
                },
                undefined,
              ]
            }
          >
            <SvgMock
              fill="currentColor"
              name="Lock"
              style={
                [
                  {
                    "color": "#ca3542",
                    "height": 24,
                    "width": 24,
                  },
                  undefined,
                ]
              }
            />
            <View
              style={
                [
                  {
                    "display": "flex",
                    "flexBasis": "0%",
                    "flexGrow": 1,
                    "flexShrink": 1,
                  },
                  undefined,
                ]
              }
            >
              <Text
                accessibilityRole="text"
                style={
                  [
                    {
                      "color": "#ca3542",
                      "fontFamily": "Geist-Medium",
                      "fontSize": 16,
                      "fontWeight": 400,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    },
                    undefined,
                  ]
                }
              >
                accounts_menu.log_out
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</RNCSafeAreaView>
`;

exports[`AccountsMenu Snapshots match snapshot when MetaMask Card is visible 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "off",
      "right": "off",
      "top": "off",
    }
  }
  style={
    {
      "backgroundColor": "#ffffff",
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 16,
          "height": 56,
          "paddingLeft": 8,
          "paddingRight": 8,
        },
        {
          "marginTop": 0,
        },
        undefined,
      ]
    }
    testID="header"
  >
    <View>
      <View
        onLayout={[Function]}
      >
        <View
          style={
            [
              {
                "transform": [
                  {
                    "scale": 1,
                  },
                ],
              },
              {
                "alignItems": "center",
                "justifyContent": "center",
              },
            ]
          }
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              [
                {
                  "alignItems": "center",
                  "backgroundColor": "transparent",
                  "borderRadius": 8,
                  "height": 32,
                  "justifyContent": "center",
                  "opacity": 1,
                  "width": 32,
                },
                undefined,
              ]
            }
            testID="accounts-menu-back-button"
          >
            <SvgMock
              fill="currentColor"
              name="ArrowLeft"
              style={
                [
                  {
                    "color": "#121314",
                    "height": 24,
                    "width": 24,
                  },
                  undefined,
                ]
              }
            />
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        [
          {
            "alignItems": "center",
            "display": "flex",
            "flexBasis": "0%",
            "flexGrow": 1,
            "flexShrink": 1,
          },
          undefined,
        ]
      }
    />
    <View>
      <View
        onLayout={[Function]}
      />
    </View>
  </View>
  <RCTScrollView
    style={
      {
        "backgroundColor": "#ffffff",
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
      }
    }
    testID="accounts-menu-scroll"
  >
    <View>
      <View
        style={
          [
            {
              "display": "flex",
            },
            {
              "paddingBottom": 12,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 12,
            },
          ]
        }
      >
        <Text
          accessibilityRole="text"
          style={
            [
              {
                "color": "#686e7d",
                "fontFamily": "Geist-Regular",
                "fontSize": 16,
                "fontWeight": 400,
                "letterSpacing": 0,
                "lineHeight": 24,
              },
              undefined,
            ]
          }
        >
          accounts_menu.manage
        </Text>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "backgroundColor": "#ffffff",
            "paddingBottom": 12,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 12,
          }
        }
        testID="settings-link"
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
                "gap": 16,
                "justifyContent": "space-between",
              },
              undefined,
            ]
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "flex-start",
                  "display": "flex",
                  "flexBasis": "0%",
                  "flexDirection": "row",
                  "flexGrow": 1,
                  "flexShrink": 1,
                  "gap": 16,
                },
                undefined,
              ]
            }
          >
            <SvgMock
              fill="currentColor"
              name="Setting"
              style={
                [
                  {
                    "color": "#121314",
                    "height": 24,
                    "width": 24,
                  },
                  undefined,
                ]
              }
            />
            <View
              style={
                [
                  {
                    "display": "flex",
                    "flexBasis": "0%",
                    "flexGrow": 1,
                    "flexShrink": 1,
                  },
                  undefined,
                ]
              }
            >
              <Text
                accessibilityRole="text"
                style={
                  [
                    {
                      "color": "#121314",
                      "fontFamily": "Geist-Medium",
                      "fontSize": 16,
                      "fontWeight": 400,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    },
                    undefined,
                  ]
                }
              >
                accounts_menu.settings
              </Text>
            </View>
          </View>
          <View
            style={
              [
                {
                  "display": "flex",
                },
                undefined,
              ]
            }
          >
            <SvgMock
              fill="currentColor"
              name="ArrowRight"
              style={
                [
                  {
                    "color": "#686e7d",
                    "height": 16,
                    "width": 16,
                  },
                  undefined,
                ]
              }
            />
          </View>
        </View>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "backgroundColor": "#ffffff",
            "paddingBottom": 12,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 12,
          }
        }
        testID="contacts-menu-item"
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
                "gap": 16,
                "justifyContent": "space-between",
              },
              undefined,
            ]
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "flex-start",
                  "display": "flex",
                  "flexBasis": "0%",
                  "flexDirection": "row",
                  "flexGrow": 1,
                  "flexShrink": 1,
                  "gap": 16,
                },
                undefined,
              ]
            }
          >
            <SvgMock
              fill="currentColor"
              name="Bookmark"
              style={
                [
                  {
                    "color": "#121314",
                    "height": 24,
                    "width": 24,
                  },
                  undefined,
                ]
              }
            />
            <View
              style={
                [
                  {
                    "display": "flex",
                    "flexBasis": "0%",
                    "flexGrow": 1,
                    "flexShrink": 1,
                  },
                  undefined,
                ]
              }
            >
              <Text
                accessibilityRole="text"
                style={
                  [
                    {
                      "color": "#121314",
                      "fontFamily": "Geist-Medium",
                      "fontSize": 16,
                      "fontWeight": 400,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    },
                    undefined,
                  ]
                }
              >
                send.contacts
              </Text>
            </View>
          </View>
          <View
            style={
              [
                {
                  "display": "flex",
                },
                undefined,
              ]
            }
          >
            <SvgMock
              fill="currentColor"
              name="ArrowRight"
              style={
                [
                  {
                    "color": "#686e7d",
                    "height": 16,
                    "width": 16,
                  },
                  undefined,
                ]
              }
            />
          </View>
        </View>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "backgroundColor": "#ffffff",
            "paddingBottom": 12,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 12,
          }
        }
        testID="manage-card"
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
                "gap": 16,
                "justifyContent": "space-between",
              },
              undefined,
            ]
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "flex-start",
                  "display": "flex",
                  "flexBasis": "0%",
                  "flexDirection": "row",
                  "flexGrow": 1,
                  "flexShrink": 1,
                  "gap": 16,
                },
                undefined,
              ]
            }
          >
            <SvgMock
              fill="currentColor"
              name="Card"
              style={
                [
                  {
                    "color": "#121314",
                    "height": 24,
                    "width": 24,
                  },
                  undefined,
                ]
              }
            />
            <View
              style={
                [
                  {
                    "display": "flex",
                    "flexBasis": "0%",
                    "flexGrow": 1,
                    "flexShrink": 1,
                  },
                  undefined,
                ]
              }
            >
              <Text
                accessibilityRole="text"
                style={
                  [
                    {
                      "color": "#121314",
                      "fontFamily": "Geist-Medium",
                      "fontSize": 16,
                      "fontWeight": 400,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    },
                    undefined,
                  ]
                }
              >
                accounts_menu.card_title
              </Text>
            </View>
          </View>
          <View
            style={
              [
                {
                  "display": "flex",
                },
                undefined,
              ]
            }
          >
            <SvgMock
              fill="currentColor"
              name="ArrowRight"
              style={
                [
                  {
                    "color": "#686e7d",
                    "height": 16,
                    "width": 16,
                  },
                  undefined,
                ]
              }
            />
          </View>
        </View>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "backgroundColor": "#ffffff",
            "paddingBottom": 12,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 12,
          }
        }
        testID="permissions-menu-item"
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
                "gap": 16,
                "justifyContent": "space-between",
              },
              undefined,
            ]
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "flex-start",
                  "display": "flex",
                  "flexBasis": "0%",
                  "flexDirection": "row",
                  "flexGrow": 1,
                  "flexShrink": 1,
                  "gap": 16,
                },
                undefined,
              ]
            }
          >
            <SvgMock
              fill="currentColor"
              name="SecurityTick"
              style={
                [
                  {
                    "color": "#121314",
                    "height": 24,
                    "width": 24,
                  },
                  undefined,
                ]
              }
            />
            <View
              style={
                [
                  {
                    "display": "flex",
                    "flexBasis": "0%",
                    "flexGrow": 1,
                    "flexShrink": 1,
                  },
                  undefined,
                ]
              }
            >
              <Text
                accessibilityRole="text"
                style={
                  [
                    {
                      "color": "#121314",
                      "fontFamily": "Geist-Medium",
                      "fontSize": 16,
                      "fontWeight": 400,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    },
                    undefined,
                  ]
                }
              >
                accounts_menu.permissions
              </Text>
            </View>
          </View>
          <View
            style={
              [
                {
                  "display": "flex",
                },
                undefined,
              ]
            }
          >
            <SvgMock
              fill="currentColor"
              name="ArrowRight"
              style={
                [
                  {
                    "color": "#686e7d",
                    "height": 16,
                    "width": 16,
                  },
                  undefined,
                ]
              }
            />
          </View>
        </View>
      </View>
      <View
        style={
          [
            {
              "display": "flex",
            },
            {
              "backgroundColor": "#b7bbc866",
              "height": 1,
              "marginBottom": 8,
              "marginLeft": 16,
              "marginRight": 16,
              "marginTop": 8,
              "opacity": 0.75,
            },
          ]
        }
      />
      <View
        style={
          [
            {
              "display": "flex",
            },
            {
              "paddingBottom": 12,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 12,
            },
          ]
        }
      >
        <Text
          accessibilityRole="text"
          style={
            [
              {
                "color": "#686e7d",
                "fontFamily": "Geist-Regular",
                "fontSize": 16,
                "fontWeight": 400,
                "letterSpacing": 0,
                "lineHeight": 24,
              },
              undefined,
            ]
          }
        >
          accounts_menu.resources
        </Text>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "backgroundColor": "#ffffff",
            "paddingBottom": 12,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 12,
          }
        }
        testID="about-metamask-menu-item"
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
                "gap": 16,
                "justifyContent": "space-between",
              },
              undefined,
            ]
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "flex-start",
                  "display": "flex",
                  "flexBasis": "0%",
                  "flexDirection": "row",
                  "flexGrow": 1,
                  "flexShrink": 1,
                  "gap": 16,
                },
                undefined,
              ]
            }
          >
            <SvgMock
              fill="currentColor"
              name="Info"
              style={
                [
                  {
                    "color": "#121314",
                    "height": 24,
                    "width": 24,
                  },
                  undefined,
                ]
              }
            />
            <View
              style={
                [
                  {
                    "display": "flex",
                    "flexBasis": "0%",
                    "flexGrow": 1,
                    "flexShrink": 1,
                  },
                  undefined,
                ]
              }
            >
              <Text
                accessibilityRole="text"
                style={
                  [
                    {
                      "color": "#121314",
                      "fontFamily": "Geist-Medium",
                      "fontSize": 16,
                      "fontWeight": 400,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    },
                    undefined,
                  ]
                }
              >
                app_settings.info_title_beta
              </Text>
            </View>
          </View>
          <View
            style={
              [
                {
                  "display": "flex",
                },
                undefined,
              ]
            }
          >
            <SvgMock
              fill="currentColor"
              name="ArrowRight"
              style={
                [
                  {
                    "color": "#686e7d",
                    "height": 16,
                    "width": 16,
                  },
                  undefined,
                ]
              }
            />
          </View>
        </View>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "backgroundColor": "#ffffff",
            "paddingBottom": 12,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 12,
          }
        }
        testID="request-feature-menu-item"
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
                "gap": 16,
                "justifyContent": "space-between",
              },
              undefined,
            ]
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "flex-start",
                  "display": "flex",
                  "flexBasis": "0%",
                  "flexDirection": "row",
                  "flexGrow": 1,
                  "flexShrink": 1,
                  "gap": 16,
                },
                undefined,
              ]
            }
          >
            <SvgMock
              fill="currentColor"
              name="Details"
              style={
                [
                  {
                    "color": "#121314",
                    "height": 24,
                    "width": 24,
                  },
                  undefined,
                ]
              }
            />
            <View
              style={
                [
                  {
                    "display": "flex",
                    "flexBasis": "0%",
                    "flexGrow": 1,
                    "flexShrink": 1,
                  },
                  undefined,
                ]
              }
            >
              <Text
                accessibilityRole="text"
                style={
                  [
                    {
                      "color": "#121314",
                      "fontFamily": "Geist-Medium",
                      "fontSize": 16,
                      "fontWeight": 400,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    },
                    undefined,
                  ]
                }
              >
                app_settings.request_feature
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "backgroundColor": "#ffffff",
            "paddingBottom": 12,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 12,
          }
        }
        testID="support-menu-item"
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
                "gap": 16,
                "justifyContent": "space-between",
              },
              undefined,
            ]
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "flex-start",
                  "display": "flex",
                  "flexBasis": "0%",
                  "flexDirection": "row",
                  "flexGrow": 1,
                  "flexShrink": 1,
                  "gap": 16,
                },
                undefined,
              ]
            }
          >
            <SvgMock
              fill="currentColor"
              name="MessageQuestion"
              style={
                [
                  {
                    "color": "#121314",
                    "height": 24,
                    "width": 24,
                  },
                  undefined,
                ]
              }
            />
            <View
              style={
                [
                  {
                    "display": "flex",
                    "flexBasis": "0%",
                    "flexGrow": 1,
                    "flexShrink": 1,
                  },
                  undefined,
                ]
              }
            >
              <Text
                accessibilityRole="text"
                style={
                  [
                    {
                      "color": "#121314",
                      "fontFamily": "Geist-Medium",
                      "fontSize": 16,
                      "fontWeight": 400,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    },
                    undefined,
                  ]
                }
              >
                app_settings.contact_support
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          [
            {
              "display": "flex",
            },
            {
              "backgroundColor": "#b7bbc866",
              "height": 1,
              "marginBottom": 8,
              "marginLeft": 16,
              "marginRight": 16,
              "marginTop": 8,
              "opacity": 0.75,
            },
          ]
        }
      />
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "backgroundColor": "#ffffff",
            "paddingBottom": 12,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 12,
          }
        }
        testID="lock-menu-item"
      >
        <View
          style={
            [
              {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
                "gap": 16,
                "justifyContent": "space-between",
              },
              undefined,
            ]
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "flex-start",
                  "display": "flex",
                  "flexBasis": "0%",
                  "flexDirection": "row",
                  "flexGrow": 1,
                  "flexShrink": 1,
                  "gap": 16,
                },
                undefined,
              ]
            }
          >
            <SvgMock
              fill="currentColor"
              name="Lock"
              style={
                [
                  {
                    "color": "#ca3542",
                    "height": 24,
                    "width": 24,
                  },
                  undefined,
                ]
              }
            />
            <View
              style={
                [
                  {
                    "display": "flex",
                    "flexBasis": "0%",
                    "flexGrow": 1,
                    "flexShrink": 1,
                  },
                  undefined,
                ]
              }
            >
              <Text
                accessibilityRole="text"
                style={
                  [
                    {
                      "color": "#ca3542",
                      "fontFamily": "Geist-Medium",
                      "fontSize": 16,
                      "fontWeight": 400,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    },
                    undefined,
                  ]
                }
              >
                accounts_menu.log_out
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</RNCSafeAreaView>
`;
